# AI-Business-Intelligence-Data-Science-Copilot

./: README.md  README.md.metadata.json  __init__.py  docker-compose.yml  pyproject.toml  pyproject.toml.metadata.json  render.yaml  render.yaml.metadata.json  requirements.txt  requirements.txt.metadata.json
agents/: business_agent.py  business_agent.py.metadata.json  data_agent.py  data_agent.py.metadata.json  eda_agent.py  eda_agent.py.metadata.json  supervisor_agent.py  supervisor_agent.py.metadata.json
backend/app/: api.py  api.py.metadata.json  db.py  db.py.metadata.json  main.py  main.py.metadata.json  models.py  models.py.metadata.json
src/engine/: auth_middleware.py  auth_middleware.py.metadata.json
streamlit_app/: app.py  requirements.txt
tests/: conftest.py  test_auth.py  test_auth.py.metadata.json
