[tool.poetry]
name = "ai-bi-copilot"
version = "0.1.0"
description = "AI Business Intelligence Data Science Copilot"
authors = ["Ramyasreekodati <example@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "*"
"uvicorn[standard]" = "*"
sqlalchemy = "*"
"passlib[bcrypt]" = "*"
python-multipart = "*"
pydantic = "*"
PyJWT = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
